2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Final renames.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-command.in:
	* flumotion/admin/command/main.py:
	  Final renames.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* flumotion.spec.in:
	* flumotion/admin/command/Makefile.am:
	* bin/flumotion-command.in (added):
	* bin/flumotion-admin-command.in (deleted):
	  Rename.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin-command.in:
	* flumotion/admin/command/main.py (added):
	* flumotion/admin/command/mains.py (deleted):
	  Rename module.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* configure.ac:
	* flumotion.spec.in:
	* flumotion/admin/command/Makefile.am:
	* bin/flumotion-command.in (deleted):
	* flumotion/admin/command/commands.py (deleted):
	* flumotion/admin/command/main.py (deleted):
	  Delete old flumotion-command.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin-command.in (added):
	  Add main binary.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* bin/flumotion-admin-command:
	* configure.ac:
	* flumotion/admin/command/common.py (added):
	* flumotion/admin/command/worker.py (added):
	* flumotion/admin/command/manager.py (added):
	* flumotion/admin/command/component.py (added):
	* flumotion/admin/command/mains.py (added):
	* flumotion/admin/command/Makefile.am:
	  Add new flumotion-admin-command, better abstracted, and using command
	  class.  This will replace flumotion-command.
	  Closes #725.

2008-08-12  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/wizard/conversionsteps.py:
	Remember the muxer, audio and video encoders when switching
	pages. The wizard steps are not persistent, so store